Tasarım iyileşti,rmeler

--- a/UskudarDenetim.UI/Views/Circular/Index.cshtml
+++ b/UskudarDenetim.UI/Views/Circular/Index.cshtml
@@ -32,7 +32,7 @@
                     <div class="column dt-sc-one-half">
                         <article class="blog-post type3">
                             <div class="entry-thumb">
-                                <a href="@Url.Action("Detail","Circular",new { id=circular.Id})"><img src="~/Images/450x300/sirku-bg.png" class="effect-img" alt="image" /></a>
+                                <a href="@Url.Action("Detail","Circular",new { id=circular.Id})"><img src="~/Images/450x300/pen.png" class="effect-img" alt="image" /></a>
                             </div> <!-- **entry-thumb - Ends** -->
                             <!-- **entry-detail - Starts** -->
                             <div class="entry-detail">
