--- a/UskudarDenetim.UI/Views/Service/Index.cshtml
+++ b/UskudarDenetim.UI/Views/Service/Index.cshtml
@@ -30,7 +30,7 @@
                     <div class="column dt-sc-one-half">
                         <article class="blog-post type3">
                             <div class="entry-thumb">
-                                <a href="@Url.Action("Detail","Service",new { id=service.Id})"><img src="~/Images/450x300/sirku-bg.png" class="effect-img" alt="image" /></a>
+                                <a href="@Url.Action("Detail","Service",new { id=service.Id})"><img src="~/Images/450x300/bg2.jpg" class="effect-img" alt="image" /></a>
                             </div> <!-- **entry-thumb - Ends** -->
                             <!-- **entry-detail - Starts** -->
                             <div class="entry-detail">
