--- a/UskudarDenetim.UI/Views/Service/ServiceDetail.cshtml
+++ b/UskudarDenetim.UI/Views/Service/ServiceDetail.cshtml
@@ -28,7 +28,7 @@
                     </div>*@
             
                     <div class="entry-body">
-                        <p> @Model.Description</p>
+                        <p> @Html.Raw(Model.Description)</p>
                     </div>
               
                 </div> <!-- **entry-detail - Ends** -->
