--- a/UskudarDenetim.UI/Views/Service/Index.cshtml
+++ b/UskudarDenetim.UI/Views/Service/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="parallax full-width-bg">
         <div class="container">
             <div class="main-title">
-                <h1>Sirküler</h1>
+                <h1>Hizmetlerimiz</h1>
             </div>
         </div>
     </div>
@@ -30,7 +30,8 @@
                     <div class="column dt-sc-one-half">
                         <article class="blog-post type3">
                             <div class="entry-thumb">
-                                <a href="@Url.Action("Detail","Service",new { id=service.Id})"><img src="~/Images/450x300/bg2.jpg" class="effect-img" alt="image" /></a>
+                                <a href="@Url.Action("Detail","Service",new { id=service.Id})"><img src="~/Images/450x300/bg2.jpg" class="effect-img" alt="image"  style="max-width: 50%;
+    border-radius: 12px;" /></a>
                             </div> <!-- **entry-thumb - Ends** -->
                             <!-- **entry-detail - Starts** -->
                             <div class="entry-detail">
