--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -14,38 +14,38 @@
         </li>*@
                         <li class="menu-item-simple-parent @(ViewContext.RouteData.Values["controller"].ToString().Equals("Circular")? "current_page_item":"")">
                             <a href="@Url.Action("CircularList","Circular")">Sirküler</a>
-
                         </li>
                         <li class="menu-item-simple-parent">
                             <a href="@Url.Action("Services","Service")">Hizmetler</a>
-                            <a class="dt-menu-expand">+</a>
                         </li>
                         <li class="menu-item-simple-parent mce_backcolor">
                             <a href="@Url.Action("Employees","TeamMember")">Çalışanlar</a>
-                            <a class="dt-menu-expand">+</a>
-                        </li>
-                        @*<li class="menu-item-simple-parent">
-                            <a href="@Url.Action("UpdateContact","Admin")">İletişim</a>
-                            <a class="dt-menu-expand">+</a>
-                        </li>
-
-                        <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("ActivityAreas","ActivityArea")">Faailiyet alanları</a>
-                            <a class="dt-menu-expand">+</a>
-                        </li>
-
-                        <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("GetAllApplyFrom","HR")">IK</a>
-                            <a class="dt-menu-expand">+</a>
-                        </li>
-                        <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("SharedLinks","SharedLink")">Faydalı Linkler</a>
-                            <a class="dt-menu-expand">+</a>
                         </li>
                         <li class="menu-item-simple-parent">
                             <a href="@Url.Action("PracticalInformations","PracticalInformations")">Faydalı Bilgiler</a>
-                            <a class="dt-menu-expand">+</a>
-                        </li>*@
+                        </li>
+                        @*<li class="menu-item-simple-parent">
+            <a href="@Url.Action("UpdateContact","Admin")">İletişim</a>
+            <a class="dt-menu-expand">+</a>
+        </li>
+
+        <li class="menu-item-simple-parent">
+            <a href="@Url.Action("ActivityAreas","ActivityArea")">Faailiyet alanları</a>
+            <a class="dt-menu-expand">+</a>
+        </li>
+
+        <li class="menu-item-simple-parent">
+            <a href="@Url.Action("GetAllApplyFrom","HR")">IK</a>
+            <a class="dt-menu-expand">+</a>
+        </li>
+        <li class="menu-item-simple-parent">
+            <a href="@Url.Action("SharedLinks","SharedLink")">Faydalı Linkler</a>
+            <a class="dt-menu-expand">+</a>
+        </li>
+        <li class="menu-item-simple-parent">
+            <a href="@Url.Action("PracticalInformations","PracticalInformations")">Faydalı Bilgiler</a>
+            <a class="dt-menu-expand">+</a>
+        </li>*@
 
                     </ul>
                 </nav>
