--- a/UskudarDenetim.UI/Views/PracticalInformations/Index.cshtml
+++ b/UskudarDenetim.UI/Views/PracticalInformations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<UskudarDenetim.UI.Models.ModelCircular>
+﻿@model List<UskudarDenetim.UI.Models.ModelPracticalInformation>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -14,7 +14,7 @@
     <div class="parallax full-width-bg">
         <div class="container">
             <div class="main-title">
-                <h1>Sirküler</h1>
+                <h1>Pratik Bilgiler</h1>
             </div>
         </div>
     </div>
@@ -25,28 +25,28 @@
             <div class="blog-items apply-isotope">
                 @if (Model.Count == 0)
                 {
-                    <h3>Henüz Sirkü Eklenmemiştir.</h3>
+                    <h3>Henüz Faydalı Eklenmemiştir.</h3>
                 }
-                @foreach (var circular in Model.OrderByDescending(x => x.CreatedDate))
+                @foreach (var practicalInfo in Model.OrderByDescending(x => x.CreatedDate))
                 {
                     <div class="column dt-sc-one-half">
                         <article class="blog-post type3">
                             <div class="entry-thumb">
-                                <a href="@Url.Action("Detail","Circular",new { id=circular.Id})"><img src="~/Images/450x300/pen.png" class="effect-img" alt="image" style="max-width: 83%;
+                                <a href="@Url.Action("Detail","PracticalInformations",new { id=practicalInfo.Id})"><img src="~/Images/450x300/info.jpg" class="effect-img" alt="image" style="max-width: 83%;
     border-radius: 12px;" /></a>
                             </div> <!-- **entry-thumb - Ends** -->
                             <!-- **entry-detail - Starts** -->
                             <div class="entry-detail">
                                 <div class="entry-title">
-                                    <h4><a href="@Url.Action("Detail","Circular",new { id=circular.Id})">@circular.Header</a></h4>
+                                    <h4><a href="@Url.Action("Detail","PracticalInformations",new { id=practicalInfo.Id})">@practicalInfo.Name</a></h4>
                                 </div>
                                 <!-- **entry-meta-data - Starts** -->
                                 <div class="entry-meta-data">
-                                    <p><span class="fa fa-user"> </span> Yayınlanma Tarihi: <a href="#"> @circular.CreatedDate </a></p>
+                                    <p><span class="fa fa-user"> </span> Yayınlanma Tarihi: <a href="#"> @practicalInfo.CreatedDate </a></p>
 
                                 </div> <!-- **entry-meta-data - Ends** -->
                                 <div class="entry-title">
-                                    <p>@circular.Title<a href="@Url.Action("Detail","Circular",new { id=circular.Id})   ">  devamını oku... </a></p>
+                                    <p>@practicalInfo.Description<a href="@Url.Action("Detail","PracticalInformations",new { id=practicalInfo.Id})   ">  devamını oku... </a></p>
                                 </div>
                             </div> <!-- **entry-detail - Ends** -->
                         </article>
