--- a/UskudarDenetim.UI/Views/TeamMember/Index.cshtml
+++ b/UskudarDenetim.UI/Views/TeamMember/Index.cshtml
@@ -2,66 +2,90 @@
 @{ ViewBag.Title = "Ekibimiz";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2 class="aligncenter">Ekip Yapısı</h2>
-<div class="full-width-section" style="margin-bottom:150px">
-    <div class="container">
-        @*<p class="middle-align">Çalışma Arkadaşlarımız<br /> Latin literature from 45 BC, making it over 2000 years old. </p>*@
-        <div class="dt-sc-hr-invisible-small"></div>
-        <div class="dt-sc-timeline-wrapper">
-            @{
-                int count = 0;
-            }
-            @foreach (var employee in Model)
-            {
-                if (count % 2 == 0)
-                {
-                    <div class="dt-sc-timeline-team right">
-                        <div class="column dt-sc-one-half first">
-                            <div class="dt-sc-hr-invisible"></div>
-                        </div>
-                        <div class="column dt-sc-one-half">
-                            <div class="dt-sc-hr-invisible"></div>
-                            <!-- **dt-sc-team - Starts** -->
-                            <div class="dt-sc-team type4">
-                                <div class="image"><img src="@employee.ImgSrc" alt="iamge" /></div>
-                                <!-- **team-details - Starts** -->
-                                <div class="team-details">
-                                    <h6><a href="#">@employee.FirstName @employee.LastName</a></h6>
-                                    <p>@employee.Title</p>
-                                    <p>@employee.Profession</p>
-                                </div> <!-- **team-details - Ends** -->
-                            </div><!-- **dt-sc-team - Ends** -->
-                        </div>
-                    </div>
-                }
-                else
-                {
-                    <div class="dt-sc-timeline-team left">
+@if (Model.Count != 0)
+{
+    <style>
 
-                        <div class="column dt-sc-one-half first">
-                            <!-- **dt-sc-team - Starts** -->
-                            <div class="dt-sc-team type4">
-                                <div class="image"><img src="@employee.ImgSrc" alt="iamge" /></div>
-                                <!-- **team-details - Starts** -->
-                                <div class="team-details">
-                                    <h6><a href="#">@employee.FirstName @employee.LastName</a></h6>
-                                    <p>@employee.Title</p>
-                                    <p>@employee.Profession</p>
+        .crop img {
+            width: 200px;
+            height: 200px;
+        }
+    </style>
+    <div class="full-width-section">
+        <div class="dt-sc-margin70"></div>
+        <div class="container">
+
+            <div class="column dt-sc-one-fourth first">
+                <div class="dt-sc-team-wrapper">
+                    <h2>Ekibimizle Tanışın</h2>
+                    <p>
+                        Ekibimiz Hakkında Detaylı Bilgi Elde Etmek İçin Resmin Üzerine Tıklamanız Yeterli.
+                    </p>
+                </div><!-- **dt-sc-team-carousel - Ends** -->
+            </div>
+            <div class="column dt-sc-three-fourth">
+                <!-- **dt-sc-team-carousel-wrapper - Starts** -->
+                <div class="dt-sc-team-carousel-wrapper">
+                    <div class="dt-sc-team-carousel">
+                        @foreach (var emp in Model)
+                        {
+                            <div class="column dt-sc-one-fourth" onclick="getExtraDetail('@emp.Id')">
+                                <div class="dt-sc-team">
+                                    <div class="image crop">
+                                        <img src="@emp.ImgSrc" alt="@emp.FirstName @emp.LastName" />
+                                    </div>
+                                    <div class="team-details">
+                                        <h6><a href="#">@emp.FirstName @emp.LastName</a></h6>
+                                        <p>@emp.Title</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="column dt-sc-one-half">
-                            <div class="dt-sc-hr-invisible"></div>
-                        </div>
-
+                        }
                     </div>
-                }
-
-                count++;
-            }
-
+                    <div class="carousel-arrows">
+                        <a class="prev" href="#"><span class="fa fa-angle-left"></span> </a>
+                        <a class="next" href="#"><span class="fa fa-angle-right"></span> </a>
+                    </div>
+                </div><!-- **dt-sc-team-carousel-wrapper - Ends** -->
+            </div>
+            <div id="emp-main" class="column first" style="display:none">
+                <div class="dt-sc-team-wrapper">
+                    <h1 id="emp-name"></h1>
+                    <h2 id="emp-title"></h2>
+                    <p id="emp-description">
+                      
+                    </p>
+                </div>
+            </div>
+            <div class="dt-sc-margin45"></div>
         </div>
-    </div>
-</div>
+    </div><!-- **Full-width-section - Ends** -->
+
+
+}
+@section scripts{
+    <script>
+
+        function getExtraDetail(id) {
+            debugger;
+            var $ = jQuery;
+           $('#emp-name').html('');
+            $('#emp-title').html('');
+            $('#emp-description').html('');
+            var model = @Html.Raw(Json.Encode(Model));
+            var currentModel;
+            for (var i = 0; i < model.length; i++) {
+                if (model[i].Id == id) {
+                    currentModel = model[i];
+                    $('#emp-name').html(currentModel.FirstName+' '+currentModel.LastName);
+                    $('#emp-title').html(currentModel.Title);
+                    $('#emp-description').html(currentModel.Description);
+                    $('#emp-main').removeAttr('style');
+                    break;
+                }
+            }
+        }
+    </script>
+
+}
 
