--- a/UskudarDenetim.UI/Views/TeamMember/_Employees.cshtml
+++ b/UskudarDenetim.UI/Views/TeamMember/_Employees.cshtml
@@ -1,53 +1,64 @@
 ﻿@model List<UskudarDenetim.UI.Models.ModelEmployee>
-@if (Model.Count != 0)
-{
-    <style>
 
-            .crop img {
-                width: 200px;
-                height: 200px;
+<h2 class="aligncenter">Ekip Yapısı</h2>
+<div class="full-width-section" style="margin-bottom:150px">
+    <div class="container">
+        @*<p class="middle-align">Çalışma Arkadaşlarımız<br /> Latin literature from 45 BC, making it over 2000 years old. </p>*@
+        <div class="dt-sc-hr-invisible-small"></div>
+        <div class="dt-sc-timeline-wrapper">
+            @{
+                int count = 0;
             }
-    </style>
-    <div class="full-width-section">
-        <div class="dt-sc-margin70"></div>
-        <div class="container">
+            @foreach (var employee in Model)
+            {
+                if (count % 2 == 0)
+                {
+                    <div class="dt-sc-timeline-team right">
+                        <div class="column dt-sc-one-half first">
+                            <div class="dt-sc-hr-invisible"></div>
+                        </div>
+                        <div class="column dt-sc-one-half">
+                            <div class="dt-sc-hr-invisible"></div>
+                            <!-- **dt-sc-team - Starts** -->
+                            <div class="dt-sc-team type4">
+                                <div class="image"><img src="@employee.ImgSrc" alt="iamge" /></div>
+                                <!-- **team-details - Starts** -->
+                                <div class="team-details">
+                                    <h6><a href="#">@employee.FirstName @employee.LastName</a></h6>
+                                    <p>@employee.Title</p>
+                                    <p>@employee.Profession</p>
+                                </div> <!-- **team-details - Ends** -->
+                            </div><!-- **dt-sc-team - Ends** -->
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <div class="dt-sc-timeline-team left">
 
-            <div class="column dt-sc-one-fourth first">
-                <div class="dt-sc-team-wrapper">
-                    <h2>Ekibimizle Tanışın</h2>
-                    <p>
-                       Ekibimiz Hakkında Detaylı Bilgi Elde Etmek İçin Resmin Üzerine Tıklamanız Yeterli.
-                    </p>
-                </div><!-- **dt-sc-team-carousel - Ends** -->
-            </div>
-            <div class="column dt-sc-three-fourth">
-                <!-- **dt-sc-team-carousel-wrapper - Starts** -->
-                <div class="dt-sc-team-carousel-wrapper">
-                    <div class="dt-sc-team-carousel">
-                        @foreach (var emp in Model)
-                        {
-                            <div class="column dt-sc-one-fourth">
-                                <div class="dt-sc-team">
-                                    <div class="image crop" >
-                                        <img src="@emp.ImgSrc" alt="@emp.FirstName @emp.LastName"    />
-                                    </div>
-                                    <div class="team-details">
-                                        <h6><a href="#">@emp.FirstName @emp.LastName</a></h6>
-                                        <p>@emp.Title</p>
-                                    </div>
+                        <div class="column dt-sc-one-half first">
+                            <!-- **dt-sc-team - Starts** -->
+                            <div class="dt-sc-team type4">
+                                <div class="image"><img src="@employee.ImgSrc" alt="iamge" /></div>
+                                <!-- **team-details - Starts** -->
+                                <div class="team-details">
+                                    <h6><a href="#">@employee.FirstName @employee.LastName</a></h6>
+                                    <p>@employee.Title</p>
+                                    <p>@employee.Profession</p>
                                 </div>
                             </div>
-                        }
-                    </div>
-                    <div class="carousel-arrows">
-                        <a class="prev" href="#"><span class="fa fa-angle-left"></span> </a>
-                        <a class="next" href="#"><span class="fa fa-angle-right"></span> </a>
-                    </div>
-                </div><!-- **dt-sc-team-carousel-wrapper - Ends** -->
-            </div>
-            <div class="dt-sc-margin45"></div>
-        </div>
-    </div><!-- **Full-width-section - Ends** -->
-    
+                        </div>
 
-}
+                        <div class="column dt-sc-one-half">
+                            <div class="dt-sc-hr-invisible"></div>
+                        </div>
+
+                    </div>
+                }
+
+                count++;
+            }
+
+        </div>
+    </div>
+</div>
