--- a/UskudarDenetim.UI/Views/ActivityArea/_ActivityArea.cshtml
+++ b/UskudarDenetim.UI/Views/ActivityArea/_ActivityArea.cshtml
@@ -5,7 +5,6 @@
     string margin30 = "dt-sc-margin30";
     string First = "first";
 }
-
 <div class="full-width-section">
     <div class="dt-sc-margin50"></div>
     <div class="container">
@@ -23,14 +22,14 @@
                         <span class=" @activityArea.IconClassName "></span>
                     </div>
                     <h4 style="    font-family: 'Open Sans', sans-serif;cursor:inherit"> <a style="text-decoration:none;cursor:inherit"> @activityArea.Name </a> </h4>
-                    <p style="    font-family: 'Open Sans', sans-serif;">@activityArea.Description</p>
+                    <p style="    font-family: 'Open Sans', sans-serif; margin-bottom:50px">@activityArea.Description</p>
                 </div>
             </div>
             if (count % 3 == 0 && count != 0)
             { }
 
             count++;
-    }
+        }
     </div>
     <div class="dt-sc-margin50"></div>
 </div>
