--- a/UskudarDenetim.UI/Views/Shared/_Banner.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Banner.cshtml
@@ -1,44 +1,47 @@
 ﻿<style>
-    .ul-orange-sld-bg {
-        color: #ffffffab;
-        font-weight: 700;
-        font-family: 'Lato';
-        font-size: 34px;
-        text-decoration:underline
+    .div-bg-color-1st {
+        background-color: #0000009c; !important;
     }
-    .li-orange-sld-bg {
-        color: #000000;
-        font-weight: 500;
-        font-family: 'Lato';
-        font-size: 26px;
-    }
+        .div-bg-color-1st a {
+            color:  #ffffff !important;
+            border:none;
+        }
 </style>
 <div class="banner">
     <div id="layerslider_11" class="ls-wp-container" style="width:100%;height:645px;max-width:1920px;margin:0 auto;margin-bottom: 0px;">
         <div class="ls-slide" data-ls="slidedelay:10000;transition2d:4;">
-            <img src="~/Images/kızkulesi/22.jpg" class="ls-bg" alt="attorney-bg" />
-          
-            <div class="ls-l " style="top:20px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:1200;">
-                <span class="ul-orange-sld-bg">Hizmetlerimiz</span>
+            <img src="~/Images/kızkulesi/24.jpg" class="ls-bg" alt="attorney-bg" />
+            <div class="ls-l div-bg-color-1st " style="top:270px;left:115px;z-index:3;white-space: nowrap;" data-ls="offsetxin:50;offsetyin:150;durationin:2500;delayin:1000;">
+                <a href="@Url.Action("Index","Service")" class="dt-sc-button2">Hizmetlerimiz</a>
             </div>
-            <div class="ls-l" style="top:80px ;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:1400;">
-                <span class="li-orange-sld-bg">Tam Tasdik </span>
+            <div class="ls-l div-bg-color-1st " style="top:350px;left:115px;z-index:3;white-space: nowrap;" data-ls="offsetxin:150;offsetyin:50;durationin:2500;delayin:200;">
+                <a href="@Url.Action("Index","PracticalInformations")" class="dt-sc-button2">Faydalı Bilgiler</a>
             </div>
-            <div class="ls-l" style="top:120px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:1600;">
-                <span class="li-orange-sld-bg">Katma Değer Vergisi İadesi </span>
+            <div class="ls-l div-bg-color-1st " style="top:430px;left:115px;z-index:3;white-space: nowrap;" data-ls="offsetxin:0;offsetyin:100;durationin:2500;delayin:600;">
+                <a href="@Url.Action("Index","Circular")" class="dt-sc-button2">Sirküler</a>
             </div>
-            <div class="ls-l" style="top:160px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:1800;">
-                <span class="li-orange-sld-bg">Ar-Ge ve Teknoloji Geliştirme Bölgeleri </span>
-            </div>
-            <div class="ls-l" style="top:200px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:2000;">
-                <span class="li-orange-sld-bg">Mali Hukuk Danışmanlığı Hizmetleri</span>
-            </div>
-            <div class="ls-l" style="top:240px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:2200;">
-                <span class="li-orange-sld-bg">Muhasebe Destek Hizmetleri</span>
-            </div>
-            <div class="ls-l" style="top:280px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:2400;">
-                <span class="li-orange-sld-bg">Diğer Tasdik Hizmetleri</span>
-            </div>
+
+            @*<div class="ls-l " style="top:20px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:1200;">
+            <span class="ul-orange-sld-bg">Hizmetlerimiz</span>
+        </div>
+        <div class="ls-l" style="top:80px ;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:1400;">
+            <span class="li-orange-sld-bg">Tam Tasdik </span>
+        </div>
+        <div class="ls-l" style="top:120px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:1600;">
+            <span class="li-orange-sld-bg">Katma Değer Vergisi İadesi </span>
+        </div>
+        <div class="ls-l" style="top:160px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:1800;">
+            <span class="li-orange-sld-bg">Ar-Ge ve Teknoloji Geliştirme Bölgeleri </span>
+        </div>
+        <div class="ls-l" style="top:200px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:2000;">
+            <span class="li-orange-sld-bg">Mali Hukuk Danışmanlığı Hizmetleri</span>
+        </div>
+        <div class="ls-l" style="top:240px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:2200;">
+            <span class="li-orange-sld-bg">Muhasebe Destek Hizmetleri</span>
+        </div>
+        <div class="ls-l" style="top:280px;left:180px;font-weight:300;  text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:2400;">
+            <span class="li-orange-sld-bg">Diğer Tasdik Hizmetleri</span>
+        </div>*@
         </div>
         @*<div class="ls-slide" data-ls="slidedelay:10000;transition2d:4;">
             <img src="../Images/sliders/blank.gif" data-src="http://placehold.it/1920x645&text=Slider" class="ls-bg" alt="fitness-bg" />
@@ -157,7 +160,7 @@
             <img class="ls-l" style="top:228px;left:473px;white-space: nowrap;" data-ls="delayin:1500;rotatexin:180;" src="../Images/sliders/blank.gif" data-src="../Images/sliders/hosting-image.png" alt="">
         </div>*@
         <div class="ls-slide" data-ls="slidedelay:10000;transition2d:4;">
-            <img src="~/Images/kızkulesi/24.jpg" class="ls-bg" alt="attorney-bg" />
+            <img src="~/Images/kızkulesi/22.jpg" class="ls-bg" alt="attorney-bg" />
             <div class="ls-l" style="top:270px;left:1013px;font-weight:300;  text-align: right;font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:4500;">
             </div>
             <div class="ls-l" style="top:124px;left:778px;white-space: nowrap;" data-ls="offsetxin:0;offsetyin:100;delayin:1000;">
